--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "run-through-history",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Run through the ages, earning rewards as you uncover history's milestones.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kellen Mace",
   "dependencies": {
     "@apollo/client": "^3.1.4",
     "apollo-link-token-refresh": "^0.3.2",
@@ -21,12 +21,15 @@
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-source-wordpress-experimental": "^1.3.8",
     "gatsby-transformer-sharp": "^2.5.13",
+    "html-react-parser": "^0.14.0",
     "jwt-decode": "^3.0.0-beta.2",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7"
   },
