--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kellen Mace",
   "dependencies": {
-    "@apollo/client": "^3.1.4",
+    "@apollo/client": "^3.2.2",
     "apollo-link-token-refresh": "^0.3.2",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
@@ -30,6 +30,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
