--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-toast-notifications": "^2.4.0",
+    "react-vertical-timeline-component": "^3.0.2",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
     "use-sound": "^1.0.2"
