Update inline code comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["booyah", "fiyahhh", "leaderboard", "uuidv"]
+  "cSpell.words": [
+    "booyah",
+    "buildtime",
+    "fiyahhh",
+    "leaderboard",
+    "uuidv"
+  ]
 }
